<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
		<TextView 
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/textView1"
		    />
		<EditText 
		    android:id="@+id/editText1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/editText1"
		    />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
		<TextView 
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/textView2"
		    />
		<EditText 
		    android:id="@+id/editText2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/editText2"
		    />
		
		<Spinner 
		    android:id="@+id/spinner1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:entries="@array/contact_type"
		    android:prompt="@string/spinner_prompt"
		    />
		
    </LinearLayout>

    <Button
       android:text="@string/button1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendData"
    	 android:id="@+id/button1"/>
    

</LinearLayout>
